syntax = "proto3";

option java_multiple_files = true;
option java_package = "origin.protobuf";

service UserService{
  rpc CreateUser(UserProto) returns (UserProto);
  rpc FindUser(SearchFieldProto) returns (UserProto);
}

service AnnouncementService{
  rpc CreateAnnouncement(AnnouncementProto) returns (AnnouncementProto);
  rpc FindAnnouncements(SearchFieldProto) returns (AnnouncementsProto);
  rpc UpdateAnnouncement(AnnouncementProto) returns (Void);
  rpc DeleteAnnouncement(AnnouncementProto) returns (Void);
}

message UserProto{
  string email = 1;
  string username = 2;
  string password = 3;
  int32 age = 4;
  string phone = 5;
  string type = 6;
}


message LoginUserProto{
  string email = 1;
  string password = 2;
}

message AnnouncementProto{
  string petOwnerEmail = 1;
  string description = 2;
  TimeIntervalProto timeInterval = 3;
  PetProto pet = 4;
  string postalCode = 5;
  string dateOfCreation = 6;
  int32 id = 7;
}

message AnnouncementsProto{
  repeated AnnouncementProto announcements = 1;
}

message PetProto{
  string petName = 1;
  string petType = 2;  // dog, cat ....
  int32 weight = 3;
  bool isVaccinated = 4;
  string description =5;
  int32 id = 6;
}

message TimeIntervalProto{
  string startDate = 1;
  string finishDate = 2;
}

message SearchFieldProto{
  string query = 1;
}

message Void{}
